# cppCTestExample

./: .travis.yml  CMakeLists.txt  README.md
cmake/: UnitTests.cmake  utest.txt
include/: mymath.h
mydaemon/: CMakeLists.txt
mydaemon/src/: main.cpp
mydaemon/test/: CMakeLists.txt  btest01.cpp  coverage.sh  gtest01.cpp
mylib/: CMakeLists.txt  mymath.cpp
mylib/test/: CMakeLists.txt  coverage.sh
